added api authentication. removed Auth0
