# routes/auth.js
@@ -1,6 +1,7 @@
 const router = require('express').Router()
-const { isAuthenticated } = require('../controllers/auth')
+const { login, logout } = require('../controllers/auth')
 
-router.get('/', isAuthenticated)
+router.post('/login', login)
+router.post('/logout', logout)
 
 module.exports = router
