# routes/users.js
@@ -1,11 +1,21 @@
 const express = require('express')
 const router = express.Router()
 const { createUser, deleteUser, getUser, getUsers, updateUser } = require('../controllers/user')
+const { isAuthenticated } = require('../controllers/auth')
 
-router.get('/', getUsers)
-router.post('/', createUser)
-router.delete('/:id', deleteUser)
-router.get('/:id', getUser)
-router.put('/:id', updateUser)
+router.get('/', isAuthenticated, getUsers)
+router.post('/', createUser
+  /*
+  #swagger.security = null
+  */
+)
+router.delete('/:id', isAuthenticated, deleteUser)
+router.get('/:id', isAuthenticated, getUser)
+router.put('/:id', isAuthenticated, updateUser)
+router.use('/auth', require('./auth')
+  /*
+  #swagger.security = null
+  */
+)
 
 module.exports = router
